<resources>
    <string name="app_name">Aula Inventario</string>
    <string name="default_web_client_id_google">82357836664-ah6h5pmoe4ca8pju1l6uu2khskunf7l6.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="teachername">Nombre completo</string>
    <string name="email">Correo electrónico</string>
    <string name="welcome">Te damos la bienvenida educador(a)</string>
    <string name="password">Contraseña</string>
    <string name="forgotPassword">¿Olvidó su contraseña?</string>
    <string name="login">Iniciar sesión</string>
    <string name="notAccount">¿No tienes cuenta?</string>
    <string name="registerHere">Registrate aquí…</string>
    <string name="fillIformation">Completa tu información</string>
    <string name="phone">Número de teléfono</string>
    <string name="confirmInfo">Confirmar</string>
    <string name="selectKinderGarden">Seleccione su jardín de niños:</string>
    <string name="registerNow">Registrate ahora</string>
    <string name="confirmPassword">Confirmar contraseña</string>
    <string name="registerMe">Registrarme</string>
    <string name="direction">Dirección/Ubicación</string>
    <string name="delete">Eliminar</string>
    <string name="about">Acerca de</string>
    <string name="complaintsAndSuggestions">Quejas y sugerencias</string>
    <string name="signOut">Cerrar sesión</string>
    <string name="number">Número</string>
    <string name="description">Descripción</string>
    <string name="amount">Cantidad</string>
    <string name="condition">Estado</string>
    <string name="add">Agregar</string>
    <string name="clear">Limpiar</string>
    <string name="complain">Queja</string>
    <string name="suggestion">Sugerencia</string>
    <string name="sendForm">Enviar formulario</string>
    <string name="writeMessage">Escribe aquí tu mensaje</string>
    <string name="selectAReason">Seleccione un motivo:</string>
    <string name="selectATurn">Seleccione un turno:</string>
    <string name="selectAGrade">Grado:</string>
    <string name="selectAGroup">Grupo:</string>
    <string name="currentVersion">Versión: 1.0.0</string>
    <string name="copyrightAndRelease">© Julio 2021 EdiVal</string>
    <string name="back">VOLVER</string>
    <string name="price">Precio</string>
    <string name="total">Total</string>
    <string name="seeMyInformation">Ver mi información</string>
    <string name="zone">Zona</string>
    <string name="sector">Sector</string>
    <string name="group">Grupo</string>
    <string name="grade">Grado</string>
    <string name="educator">Educador(a)</string>
    <string name="kinder">Jardín de niños</string>
    <string name="turn">Turno</string>
    <string name="key">Clave</string>
    <string name="lastUpdate">Última actualización:</string>
    <string name="zoneValue">005</string>
    <string name="sectorValue">08</string>
    <string name="editInfo">Editar información</string>
    <string name="editMyInformation">Editar mi información</string>
    <string name="EditMe">Editar información</string>
    <string name="title_activity_maps">Map</string>
    <string name="seeGardenMap">Ver mapa de jardines</string>
    <string name="satelliteView">Vista de satélite</string>
    <string name="pushSearch">Oprime aquí para buscar…</string>
    <string name="createNewRegister">Crear un nuevo registro</string>
    <string name="cleanForm">Limpiar formulario/Vaciar casillas</string>
</resources>