<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/itemAbout"
        android:title="@string/about"
        app:showAsAction="never" />
    <item
        android:id="@+id/itemContactMe"
        android:title="@string/complaintsAndSuggestions"
        app:showAsAction="never" />
    <item
        android:id="@+id/itemMyProfile"
        android:title="@string/seeMyInformation"
        app:showAsAction="never" />
    <item
        android:id="@+id/itemMap"
        android:title="@string/seeGardenMap"
        app:showAsAction="never" />
    <item
        android:id="@+id/itemLogout"
        android:title="@string/signOut"
        app:showAsAction="never" />
</menu>